k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcn-ingress
spec:
  rules:
  - host: mcn.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders
            port:
              number: 8081

      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory
            port:
              number: 8082
